# yuki-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  output.rs  schema.rs
src/cli/: accounts.rs  admin.rs  check.rs  contacts.rs  documents.rs  init.rs  invoices.rs  mod.rs  projects.rs  upload.rs  vat.rs
src/client/: accounting.rs  accounting_info.rs  archive.rs  contact.rs  mod.rs  sales.rs  soap_client.rs  vat.rs
tests/: config.rs  error.rs  output.rs  parsers.rs  period.rs  soap_client.rs
yuki-client/: Cargo.toml  README.md
yuki-client/src/: lib.rs  period.rs
yuki-client/src/client/: accounting.rs  accounting_info.rs  archive.rs  contact.rs  mod.rs  sales.rs  soap_client.rs  vat.rs
yuki-client/tests/: error.rs  parsers.rs  period.rs  soap_client.rs
yuki_cli_py/: __init__.py
