[workspace]
members = ["yuki-client"]

[package]
name = "yuki-cli"
version = "0.1.6"
edition = "2024"
rust-version = "1.90"
description = "CLI client for the Yuki bookkeeping SOAP API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rvben/yuki-cli"
keywords = ["yuki", "bookkeeping", "soap", "accounting", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "yuki_cli"
path = "src/lib.rs"

[[bin]]
name = "yuki"
path = "src/main.rs"

[dependencies]
yuki-client = { path = "yuki-client" }
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
jsonschema = "0.30"
